# image-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/ijrs-tauri/: Cargo.toml  tauri.conf.json
apps/ijrs-tauri/src/: main.rs
apps/ijrs-tauri/ui/: app.js  launcher.html  launcher.js  styles.css  viewer.css
apps/ijrs-tauri/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/ijrs-tauri/web/src/components/: viewer-window-page.tsx
apps/ijrs-tauri/web/src/components/ui/: button.tsx  input.tsx  menubar.tsx
apps/ijrs-tauri/web/src/lib/: tauri.ts
apps/ijrs-tauri/web/src/menu/: menu-manifest.json
crates/ijrs-app/: Cargo.toml
crates/ijrs-app/src/: lib.rs
crates/ijrs-cli/: Cargo.toml
crates/ijrs-cli/src/: main.rs
crates/ijrs-core/: Cargo.toml
crates/ijrs-io/: Cargo.toml
crates/ijrs-io/src/: lib.rs
crates/ijrs-ops/: Cargo.toml
crates/ijrs-ops/src/: components.rs  gaussian.rs  intensity.rs  lib.rs  measurements.rs  morphology.rs  threshold.rs  util.rs
crates/ijrs-pipeline/: Cargo.toml
crates/ijrs-pipeline/src/: lib.rs
docs/: architecture.md  cli.md  migration-notes.md  ui.md
fixtures/: README.md
fixtures/recipes/: analysis-basic.yaml  normalize-threshold.json
src/: cli.rs  commands.rs  formats.rs  lib.rs  main.rs  model.rs  runtime.rs  ui.rs  workflow.rs
src/cli/: runner.rs  types.rs
src/commands/: axes.rs  components.rs  error.rs  gaussian.rs  intensity.rs  measurements.rs  morpholibj.rs  morphology.rs  noise.rs  params.rs  registry.rs  schema.rs  tests.rs  threshold.rs  thunderstorm.rs  transform.rs  util.rs
src/formats/: api.rs  codec.rs  error.rs  raster.rs  tests.rs  tiff.rs  util.rs
src/image-rs/cli/: Cargo.toml
src/image-rs/cli/src/: main.rs
src/image-rs/commands/: Cargo.toml
src/image-rs/commands/src/: components.rs  gaussian.rs  intensity.rs  lib.rs  measurements.rs  morpholibj.rs  morphology.rs  threshold.rs  thunderstorm.rs
src/image-rs/formats/: Cargo.toml
src/image-rs/formats/src/: lib.rs
src/image-rs/model/: Cargo.toml
src/image-rs/model/src/: lib.rs
src/image-rs/runtime/: Cargo.toml
src/image-rs/runtime/src/: lib.rs
src/image-rs/ui/: Cargo.toml  build.rs  tauri.conf.json
src/image-rs/ui/capabilities/: default.json
src/image-rs/ui/src/: command_registry.rs  main.rs
src/image-rs/ui/src/interaction/: transform.rs
src/image-rs/ui/src/menu/: imagej-menu-manifest.json
src/image-rs/ui/ui/: index.html  launcher.css  tauri-api.js  viewer.html  viewer.js
src/image-rs/ui/web/src/: App.tsx  index.css
src/image-rs/ui/web/src/components/: control-window-page.tsx  menu-shell.tsx
src/image-rs/ui/web/src/components/ui/: dialog.tsx  toast.tsx  toaster.tsx
src/image-rs/ui/web/src/hooks/: use-toast.tsx
src/image-rs/ui/web/src/types/: menu.ts
src/image-rs/workflow/: Cargo.toml
src/image-rs/workflow/src/: lib.rs
src/model/: axis.rs  dataset.rs  error.rs  metadata.rs  tests.rs
src/runtime/: context.rs  dataset_service.rs  error.rs  io_service.rs  ops_service.rs  pipeline_service.rs
src/ui/: app.rs  command_registry.rs  dialogs.rs  image_plus.rs  lut.rs  macros.rs  menu.rs  repaint.rs  state.rs  toolbar.rs
src/ui/interaction/: events.rs  mod.rs  roi.rs  tooling.rs  transform.rs
src/ui/menu/: imagej-menu-manifest.json
src/workflow/: error.rs  execute.rs  io.rs  report.rs  spec.rs  tests.rs
