[package]
name = "ijrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ijrs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ijrs-app = { path = "../ijrs-app" }
ijrs-core = { path = "../ijrs-core" }
ijrs-pipeline = { path = "../ijrs-pipeline" }
serde.workspace = true
serde_json.workspace = true
