[package]
name = "ijrs-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ijrs-core = { path = "../ijrs-core" }
image.workspace = true
ndarray.workspace = true
thiserror.workspace = true
tiff.workspace = true

[dev-dependencies]
tempfile.workspace = true
