[package]
name = "ijrs-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ijrs-core = { path = "../ijrs-core" }
ijrs-ops = { path = "../ijrs-ops" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
ndarray.workspace = true
