[package]
name = "image-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
image-model = { path = "../model" }
morpholib-rs = { git = "https://github.com/keejkrej/morpholib-rs" }
ndarray.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
