[package]
name = "image-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
image-model = { path = "../model" }
image.workspace = true
ndarray.workspace = true
thiserror.workspace = true
tiff.workspace = true

[dev-dependencies]
tempfile.workspace = true
