[package]
name = "image-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
image-model = { path = "../model" }
image-formats = { path = "../formats" }
image-commands = { path = "../commands" }
image-workflow = { path = "../workflow" }
serde_json.workspace = true
thiserror.workspace = true
