[package]
name = "image-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
morpholib = ["image-runtime/morpholib", "image-commands/morpholib"]
thunderstorm = ["image-runtime/thunderstorm", "image-commands/thunderstorm"]

[dependencies]
eframe = { version = "0.31" }
image-runtime = { path = "../runtime" }
image-model = { path = "../model" }
image-commands = { path = "../commands" }
image.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd = "0.15"
