[package]
name = "image-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
image-model = { path = "../model" }
image-commands = { path = "../commands" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
ndarray.workspace = true
